# omp-visualizer

./: .gitignore  README.md  flake.nix  goal.md  homework.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  models.rs
backend/src/api/: mod.rs  routes.rs
backend/src/session/: index.rs  mod.rs  parser.rs  store.rs
backend/templates/: conversation.html  dashboard.html
backend/tests/: parser_tests.rs
deploy/: incus.sh  up.sh
docs/: design-doc.md  experiment-report.md
